@@ -1,3 +1,8 @@
+Mon Jan 07 15:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* Makefile: Bump version.
+	* SQLClient.h: Improve documentation.
+
 Sat Dec 18 06:00:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* WebServer.m: Fix bug in substitution of nil values into templates.
